# simport

./: .gitignore  README.md  api.md  install.bat  install.py  lrclib.md  main.py  pyproject.toml
simport/: .gitignore  local_install.ts  package-lock.json  package.json  test.ts
simport-ts/: package-lock.json  package.json  tsconfig.json
simport-ts/src/: client.ts  ensureSimportInstalled.ts  index.ts
simport/src/: client.ts  ensureSimportInstalled.ts
src/simport/: logger.py
src/simport/cli/: cli.py
src/simport/daemon/: server.py  utils.py
src/simport/daemon/handlers/: search.py  transcribe.py  vimport.py
src/simport/daemon/pipeline/: align_lyrics.py  download_cover.py  download_youtube_video_and_audio.py  get_song_info_from_title.py  lrclib_api.py  remove_music.py  types.py
src/vibes_song_importer/cli/: cli.py
src/vibes_song_importer/cover/: downloader.py
src/vibes_song_importer/lrclib/: __init__.py  api.py
src/vibes_song_importer/lyrics_alignment/: alignment.py  remove_music.py
src/vibes_song_importer/videotitle/: __init__.py  videotitle.py
src/vibes_song_importer/youtube/: downloader.py
