[project]
name = "vibes_song_importer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "requests>=2.33.1",
    "whisperx>=3.8.5",
    "click>=8.0.0",
    "demucs>=4.0.1",
    "soundfile>=0.13.1",
]

[project.scripts]
simport = "vibes_song_importer.cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
